; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_omap_gfx.c_omapfb_get_fb_device.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers/extr_omap_gfx.c_omapfb_get_fb_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@omapfb_get_fb_device.fbname = internal global [12 x i8] zeroinitializer, align 1
@.str = private unnamed_addr constant [9 x i8] c"/dev/fb0\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"/dev/fb%d\00", align 1
@.str.2 = private unnamed_addr constant [47 x i8] c"[video_omap]: Using %s as framebuffer device.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @omapfb_get_fb_device to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @omapfb_get_fb_device() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i32, align 4
  %4 = call %struct.TYPE_5__* (...) @config_get_ptr()
  store %struct.TYPE_5__* %4, %struct.TYPE_5__** %2, align 8
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  store i32 %8, i32* %3, align 4
  %9 = load i32, i32* %3, align 4
  %10 = icmp eq i32 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %0
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  br label %17

12:                                               ; preds = %0
  %13 = load i32, i32* %3, align 4
  %14 = sub nsw i32 %13, 1
  %15 = call i32 @snprintf(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @omapfb_get_fb_device.fbname, i64 0, i64 0), i32 12, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i32 %14)
  %16 = call i32 @RARCH_LOG(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @omapfb_get_fb_device.fbname, i64 0, i64 0))
  store i8* getelementptr inbounds ([12 x i8], [12 x i8]* @omapfb_get_fb_device.fbname, i64 0, i64 0), i8** %1, align 8
  br label %17

17:                                               ; preds = %12, %11
  %18 = load i8*, i8** %1, align 8
  ret i8* %18
}

declare dso_local %struct.TYPE_5__* @config_get_ptr(...) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1

declare dso_local i32 @RARCH_LOG(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
